--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>My app</title>
     <body>
-      this is my app
+      this is my app login form
     </body>
   </head>
 </html>
